board/k8s/django-board-ingress.yaml

# 순서5.ingress배포
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-board-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - "django-board.seonguk.com"
    secretName: django-board.seonguk.com-tls
  rules:
  - host: "django-board.seonguk.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: django-board-srv
            port:
              number: 8000
